--- a/jpetstore-master/pom.xml
+++ b/jpetstore-master/pom.xml
@@ -241,7 +241,7 @@
         <tomcat.version>7.0.72</tomcat.version>
       </properties>
     </profile> -->
-	<profile>
+	<!--<profile>
       <id>sonar-coverage</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -287,7 +287,7 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
+    </profile> -->
 	
   </profiles>
 
