--- a/jpetstore-master/pom.xml
+++ b/jpetstore-master/pom.xml
@@ -182,7 +182,7 @@
         <artifactId>cargo-maven2-plugin</artifactId>
         <version>1.6.0</version>
       </plugin>
-	<!--
+	
 	  <plugin>
 		<artifactId>maven-deploy-plugin</artifactId>
 		<version>2.7</version>
@@ -203,7 +203,7 @@
 		<configuration>
 			<skip>true</skip>
 		</configuration>
-	</plugin> -->
+	</plugin>
     </plugins>
   </build>
 
