uncomment distribution management

--- a/jpetstore-master/pom.xml
+++ b/jpetstore-master/pom.xml
@@ -48,20 +48,19 @@
   <ciManagement>
     <system>Travis CI</system>
     <url>https://travis-ci.org/mybatis/jpetstore-6</url>
-  </ciManagement>
+  </ciManagement> -->
   <distributionManagement>
-    <site>
+    <!-- <site>
       <id>gh-pages</id>
       <name>Mybatis GitHub Pages</name>
       <url>git:ssh://git@github.com/mybatis/jpetstore-6.git?gh-pages#</url>
-    </site>
-	<snapshotRepository>
+    </site> -->
+<snapshotRepository>
 		<id>nexus-snapshots</id>
 		<url>http://16.181.235.56:8088/nexus/content/repositories/Jpetstore</url>
 </snapshotRepository>
 </distributionManagement>
-  </distributionManagement> -->
-
+  
   <dependencies>
     <dependency>
       <groupId>ognl</groupId>
