--- a/jpetstore-master/pom.xml
+++ b/jpetstore-master/pom.xml
@@ -56,8 +56,8 @@
       <url>git:ssh://git@github.com/mybatis/jpetstore-6.git?gh-pages#</url>
     </site> -->
 <snapshotRepository>
-		<id>nexus-snapshots</id>
-		<url>http://192.168.33.20:8081/repository/Demo-Snapshot</url>
+		<id>demo-snapshots</id>
+		<url>http://192.168.33.20:8081/repository/demo-Snapshots</url>
 </snapshotRepository>
 </distributionManagement>
   
